# simtrack

interface/: CMakeLists.txt  package.xml
interface/src/: cmd_line_generate_sift_model_separate.cpp  multi_rigid_tracker.cpp
low_level_vision/: CMakeLists.txt
pose_estimation/: CMakeLists.txt
siftgpu/: CMakeLists.txt
simtrack_nodes/: CMakeLists.txt
simtrack_nodes/include/simtrack_nodes/: simtrack_tradr_node.h
simtrack_nodes/src/: multi_rigid_node.cpp  pr2_cam_switch_node.cpp  simtrack_tradr_node.cpp  simtrack_tradr_node_main.cpp
simtrack_nodes/srv/: MaskImage.srv  StopTracking.srv  SwitchCameraByName.srv
utilities/: CMakeLists.txt
